[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tiles/Base/Base.gd" type="Script" id=1]
[ext_resource path="res://Tiles/Base/Base.png" type="Texture" id=2]
[ext_resource path="res://Tiles/Base/Hovered.png" type="Texture" id=3]

[node name="Base" type="Area2D"]
position = Vector2( 656, 320 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -66, 64, -34, 64, 34, 0, 66, -64, 34, -64, -34 )

[node name="HoveredSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
